2003-06-24  Jeroen Dobbelaere  <jeroen.dobbelaere@acunia.com>
2003-06-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/net/tftp_client.c: Define tftp_stream.last_good_block to
	permit downloads > 32MB.
	(tftp_ack): Allow last_good_block to wrap.
	(tftp_stream_read): Ditto.

	* src/net/bootp.c: Use correct DHCP message type for DHCPREQUEST.

2003-05-20  Mark Salter  <msalter@redhat.com>

	* cdl/redboot.cdl (CYGBLD_REDBOOT_CMD_LINE_HISTORY): New option.
	* src/io.c: Support history command and history expansion.
	* doc/redboot.sgml: Document command history support.

2003-05-14  Mark Salter  <msalter@redhat.com>

	* src/flash.c (flash_get_config): Add CONFIG_NETPORT case.

2003-05-13  Nick Garnett  <nickg@balti.calivar.com>

	* doc/redboot_installing.sgml: Added installation instructions for
	Atmel EB40A, EB42 and EB55 boards.

2003-05-06  Mark Salter  <msalter@redhat.com>

	* src/main.c (cyg_start): Clear gdb_active when returning from stub.

2003-05-06  Pierre Habraken  <Pierre.Habraken@imag.fr>

	* cdl/redboot.cdl: Added option
	CYGOPT_REDBOOT_BSP_SYSCALLS_EXIT_WITHOUT_TRAP for enabling (possibly
	single shot) programs to exit and return a termination status as
	their normal behavior (i.e. without raising a SIGTRAP).
	* src/syscall.c (__do_syscall): Added conditionally compiled code
	to SYS_exit for returning to RedBoot main loop without raising a
	SIGTRAP, even when the calling program is not being debugged.
	* src/main.c (cyg_start): Added code (following Jonathan Larmour's
	and Mark Salter's suggestions) to RedBoot main loop: a (context)
	savepoint is created before the thread of control is transferred to
	gdb stubs (through a trampoline procedure). This savepoint enables
	the stubs to return control back to the main loop by calling the
	return_to_redboot procedure (macro CYGACC_CALL_IF_MONITOR_RETURN).
	Procedure go_trampoline and variables go_saved_context and
	go_return_status have been respectively renamed	to trampoline,